...
          ),
        }}
      />
      <Tabs.Screen
        name="patterns/index"
        options={{
          title: 'Patterns',
          tabBarAccessibilityLabel: 'Patterns',
          tabBarIcon: ({ color, focused, size }) => (
            <MaterialCommunityIcons
              accessibilityElementsHidden
              color={color}
              name={focused ? 'book-open-page-variant' : 'book-open-outline'}
...
